fixed: overflow:hidden

--- a/styles/style.css
+++ b/styles/style.css
@@ -225,6 +225,7 @@ ol {
 
 .content__list {
   height: 298px;
+  min-width: 399px;
   overflow-y: auto;
   position: relative;
 }
@@ -243,7 +244,6 @@ ol {
   text-transform: uppercase;
 
   display: block;
-  position: relative;
   padding: 2px;
 }
 
@@ -264,7 +264,7 @@ ol {
   text-decoration-line: underline;
 }
 
-.content__card-link_current:active {
+.content__card-link:active {
   background-color: #545050;
 }
 
@@ -272,6 +272,11 @@ ol {
   display: flex;
   justify-content: space-between;
   align-items: start;
+  overflow: hidden;
+}
+
+.content__video-card-description-container {
+  flex-grow: 1;
 }
 
 .content__video-card-title {
@@ -283,6 +288,7 @@ ol {
   font-weight: 700;
   line-height: 100%; /* 30px */
   text-transform: uppercase;
+  max-width: 184px;
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
@@ -295,6 +301,7 @@ ol {
   font-style: normal;
   font-weight: 400;
   line-height: 16.2px; /* 90% */
+  text-transform: none;
 }
 
 .content__video-card-thumbnail {
@@ -303,9 +310,4 @@ ol {
   width: 100%;
   height: 100%;
   object-fit: cover;
-}
-
-.content__video-card-description-container {
-  flex-grow: 1;
-  overflow: hidden;
 }
